<resources>
    <string name="lockscreen">LockScreen</string>
    <string name="lockscreen_summary">LockScreen© LeWaTek Limited.</string>
    <string name="fancywallpaper">Fancy Wallpaper</string>
    <string name="the_spring_festival">Spring Festival</string>
    <string name="lantern_festival">Lantern Festival</string>
    <string name="the_dragon_boat_festival">Dragon boat festival</string>
    <string name="double_seventh_day">Double seventh festival</string>
    <string name="the_mid_autumn_festival">Mid-autumn Festival</string>
    <string name="the_double_ninth_festival">Double Ninth Festival</string>
    <string name="the_laba_rice_porridge_festival">Laba</string>
    <string name="new_years_day">"New Year's Day"</string>
    <string name="valentines_day">"Valentine's Day"</string>
    <string name="international_womens_day">"Women's Day"</string>
    <string name="arbor_day">Arbor Day</string>
    <string name="fools_day">"April Fool's Day"</string>
    <string name="labour_day">May Day</string>
    <string name="chinese_youth_day">Youth Day</string>
    <string name="childrens_day">"Children's Day"</string>
    <string name="partys_day">CPC Founding Day</string>
    <string name="the_armys_day">Army Day</string>
    <string name="teachers_day">"Teachers' Day"</string>
    <string name="national_day">National Day</string>
    <string name="christmas_day">Christmas</string>
    <string name="national_father_day">"Sun Yat-sen's Birthday"</string>
    <string name="slight_cold">Slight Cold</string>
    <string name="great_cold">Big Chill</string>
    <string name="spring_begins">Beginning of spring</string>
    <string name="the_rains">Rainwater</string>
    <string name="insects_awaken">Waking of Insects</string>
    <string name="vernal_equinox">Spring equinox</string>
    <string name="clear_and_bright">Qingming</string>
    <string name="grain_rain">Grain Rain</string>
    <string name="summer_begins">Beginning of summer</string>
    <string name="grain_buds">Grain Full</string>
    <string name="grain_in_ear">Grain in Ear</string>
    <string name="summer_solstice">Summer Solstice</string>
    <string name="slight_heat">Slight Heat</string>
    <string name="great_heat">Great Heat</string>
    <string name="autumn_begins">Beginning of autumn</string>
    <string name="stopping_the_heat">End of heat</string>
    <string name="white_dews">White dew</string>
    <string name="autumn_equinox">Autumnal Equinox</string>
    <string name="cold_dews">Cold Dews</string>
    <string name="hoar_frost_falls">First Frost</string>
    <string name="winter_begins">Beginning of winter</string>
    <string name="light_snow">Light Snow</string>
    <string name="heavy_snow">Heavy Snow</string>
    <string name="winter_solstice">Winter Solstice</string>
    <string name="lunar_calendar">Lunar calendar</string>
    <string name="lunar_zheng">First</string>
    <string name="lunar_yi">One</string>
    <string name="lunar_er">Two</string>
    <string name="lunar_san">Three</string>
    <string name="lunar_si">Four</string>
    <string name="lunar_wu">Five</string>
    <string name="lunar_liu">Six</string>
    <string name="lunar_qi">Seven</string>
    <string name="lunar_ba">Eight</string>
    <string name="lunar_jiu">Nine</string>
    <string name="lunar_shi">Ten</string>
    <string name="lunar_shi_yi">Winter</string>
    <string name="lunar_shi_er">December</string>
    <string name="lunar_chu_shi">Tenth</string>
    <string name="lunar_er_shi">Twenty</string>
    <string name="lunar_san_shi">Thirty</string>
    <string name="lunar_chu">Early</string>
    <string name="lunar_leap">Intercalary</string>
    <string name="lunar_ling">O</string>
    <string name="lunar_nian">Twenty</string>
    <string name="lunar_year">Years</string>
    <string name="lunar_yue">Month</string>
    <string name="phoneAppLabel">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="msimFdnListLabel">MSIM FDN list</string>
    <string name="fdn_contact_invalid">Invalid contact name or number.</string>
    <string name="fdn_contact_name_number_invalid">Name and number can not be empty at the same time.</string>
    <string name="fdn_contact_number_invalid">Invalid contact number.</string>
    <string name="fdn_phone_book_busy">Phone book is busy now,please try later.</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out-of-network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">Barred call</string>
    <string name="callFailed_dialToUssd">DIAL request modified to USSD request.</string>
    <string name="callFailed_dialToSs">DIAL request modified to SS request.</string>
    <string name="callFailed_dialToDial">DIAL request modified to DIAL with different number.</string>
    <string name="callFailed_incoming_cb_enabled">Party has barred all Incoming calls.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">CDMA: Phone locked until power cycle.</string>
    <string name="callFailed_cdma_drop">CDMA: Call dropped.</string>
    <string name="callFailed_cdma_intercept">CDMA: Call intercepted.</string>
    <string name="callFailed_cdma_reorder">CDMA: reorder.</string>
    <string name="callFailed_cdma_SO_reject">CDMA: Service Option Reject.</string>
    <string name="callFailed_cdma_retryOrder">CDMA: retry order.</string>
    <string name="callFailed_cdma_accessFailure">CDMA: Access unsuccessful.</string>
    <string name="callFailed_cdma_preempted">CDMA: Preempted.</string>
    <string name="callFailed_cdma_notEmergency">Only Emergency calls are possible.</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="callUnanswered_forwarded">Call Unanswered and Forwarded</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call Lost</string>
    <string name="ok">OK</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running…</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="call_additional_sum">Others</string>
    <string name="call_forwarding_settings">Voice call forwarding settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="sum_fdn">Manage Fixed Dialing Numbers</string>
    <string name="onscreenHoldText">Hold</string>
    <string name="onscreenEndCallText">End</string>
    <string name="onscreenShowDialpadText">Dialpad</string>
    <string name="onscreenMuteText">Mute</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenMergeCallsText">Merge calls</string>
    <string name="onscreenSwapCallsText">Swap</string>
    <string name="onscreenAudioText">Audio</string>
    <string name="recording">Please open the hands-free recording</string>
    <string name="contactsIconLabel">Contacts</string>
    <string name="sub1LineNumber">Sub1 Number :</string>
    <string name="sub2LineNumber">Sub2 Number :</string>
    <string name="proceed">Proceed</string>
    <string name="lable_call_barring">Call barring</string>
    <string name="call_barring_sum">Voice call barring settings</string>
    <string name="video_call">Video Call</string>
    <string name="sum_video_call">Video call related settings</string>
    <string name="voice_mail">Voice mail</string>
    <string name="sum_voice_mail">Voice mail service and number</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="ip_prefix_setting">IP prefix number</string>
    <string name="ip_prefix_setting_sum">IP prefix number settings</string>
    <string name="dual_mic_title">Noise Reduction</string>
    <string name="dual_mic_turnoff">Dual mic noise Reduction off</string>
    <string name="dual_mic_turnon">Dual mic noise Reduction on</string>
    <string name="minutereminder_title">Minute Reminder</string>
    <string name="minutereminder_turnon">Turn on minute reminder at 45s of every minute</string>
    <string name="minutereminder_turnoff">Turn off minute reminder</string>
    <string name="voice_call_settings">Voice call settings</string>
    <string name="screen_awake">Keep screen awake</string>
    <string name="screen_awake_sum">Screen will stay awake longer than normal while in-call</string>
    <string name="dialpad_tone_dlg_title">Dialpad tone</string>
    <string name="dialpad_tone_title">Dialpad tone</string>
    <string name="dialpad_tone_default_summary">Default dialpad tone</string>
    <string name="yellowpage_title">yellowpage_summary</string>
    <string name="yellowpage_summary">yellowpage_summary</string>
    <string name="audio_sound_title">Sound</string>
    <string name="vibrate_outgoing">Vibrate on answer/hangup/call waiting</string>
    <string name="vibrate_ringing">Vibrate on ring</string>
    <string name="voice_call_ringtone_setting_title">Ringtones setting</string>
    <string name="incoming_call_silent">Flip to silence</string>
</resources>