<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/pinc" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:paddingTop="15.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingLeft="10.0dip" android:layout_width="150.0dip" android:layout_height="wrap_content" android:text="@string/sub1LineNumber" />
            <EditText android:id="@id/sub1_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:capitalize="none" android:autoText="false" android:inputType="phone" android:imeOptions="actionNext" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:paddingTop="15.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingLeft="10.0dip" android:layout_width="150.0dip" android:layout_height="wrap_content" android:text="@string/sub2LineNumber" />
            <EditText android:id="@id/sub2_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:capitalize="none" android:autoText="false" android:inputType="phone" android:imeOptions="actionDone" />
        </LinearLayout>
        <Button android:id="@id/button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="15.0dip" android:text="@string/proceed" />
    </LinearLayout>
</RelativeLayout>