<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/incall_audio_container" android:background="@null" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/audio_bt_container" style="@style/InCallAudioOptionStyle">
        <ToggleButton android:id="@id/audio_bt" android:clickable="false" android:textOn="@string/audio_mode_bluetooth" android:textOff="@string/audio_mode_bluetooth" android:drawableLeft="@drawable/btn_compound_bt" android:contentDescription="@string/audio_mode_bluetooth" style="@style/InCallAudioOptions" />
    </LinearLayout>
    <View android:background="@color/dial_num_color_bg" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" />
    <LinearLayout android:id="@id/audio_handset_container" style="@style/InCallAudioOptionStyle">
        <ToggleButton android:id="@id/audio_handset" android:clickable="false" android:textOn="@string/audio_mode_earpiece" android:textOff="@string/audio_mode_earpiece" android:drawableLeft="@drawable/btn_compound_handset" android:contentDescription="@string/audio_mode_earpiece" style="@style/InCallAudioOptions" />
    </LinearLayout>
    <View android:background="@color/dial_num_color_bg" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" />
    <LinearLayout android:id="@id/audio_speaker_container" style="@style/InCallAudioOptionStyle">
        <ToggleButton android:id="@id/audio_speaker" android:clickable="false" android:textOn="@string/audio_mode_speaker" android:textOff="@string/audio_mode_speaker" android:drawableLeft="@drawable/btn_compound_speaker" android:contentDescription="@string/audio_mode_speaker" style="@style/InCallAudioOptions" />
    </LinearLayout>
</LinearLayout>